--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -6,8 +6,9 @@ on:
   issues:
     types: [ opened ]
 env:
-  develop_branch: ': Develop < '
-  submitted_by: 'submitted by '
+  develop_branch: 'Develop'
+  from_var: 'from'
+  submitted_by: 'submitted by'
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -16,29 +17,17 @@ jobs:
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
-          title: ${{ github.workflow }}${{ env.develop_branch }} ${{ github.event.pull_request.title }}
-          message: ${{ env.submitted_by }} ${{ github.triggering_actor }}
+          title: ${{ github.workflow }}${{ env.develop_branch }}
+          message: ${{ from_var }} ${{ github.event.pull_request.title }}
           color: ff69b4
           buttons: |
             'Button 1' https://uic.edu/
             'Button number two' https://red.uic.edu/
           sections: |
             -
-              activityTitle: activityTitle
-              activitySubtitle: activitySubtitle, timestamp?
+              activityTitle: ${{ env.submitted_by }} ${{ github.triggering_actor }}
+              activitySubtitle: activitySubtitle
               facts:
-                -
-                  name: "github.run_id"
-                  value: ${{ github.run_id }}
-                -
-                  name: "github.ref"
-                  value: ${{ github.ref }}
-                -
-                  name: "github.ref_name"
-                  value: ${{ github.ref_name }}
-                -
-                  name: "github.pull_request_status"
-                  value: ${{ github.pull_request_status }}
                 -
                   name: "github.event"
                   value: ${{ github.event }}
