--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
-          message: ${{ env.develop_branch }} ${{ env.from_var }} ${{ github.event.pull_request.title }}<br>${{ env.submitted_by }} ${{ github.triggering_actor
+          message: ${{ env.develop_branch }} ${{ env.from_var }} ${{ github.event.pull_request.title }}<br>${{ env.submitted_by }} ${{ github.triggering_actor }}
           color: ff69b4
           buttons: |
             'Button 1' https://uic.edu/
