--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
+      - uses: kceb/pull-request-url-action@v1
+        id: pr-url
         with:
           webhook: https://uic365.webhook.office.com/webhookb2/e2758c1c-477f-4de7-b1bd-c8f35fe1d105@e202cd47-7a56-4baa-99e3-e3b71a7c77dd/IncomingWebhook/ef5cd950674649228b1ae1c203a82a2a/68f631fe-fabd-412d-b045-29ece196782a
           title: ${{ github.workflow }}
@@ -33,7 +35,9 @@ jobs:
                 -
                   name: "github.repository"
                   value: ${{ github.repository }}
-
+                -
+                  name: pull request url
+                  value: ${{ steps.pr-url.outputs.url }}
 
 
               text: Lorem ipsum 
