--- a/.github/workflows/pull_request_workflow.yml
+++ b/.github/workflows/pull_request_workflow.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: kceb/pull-request-url-action@v1
         id: pr-url
+      - run: echo "${{ steps.pr-url.outputs.url }}"
       - name: 📣 Send teams notification
         uses: simbo/msteams-message-card-action@latest
         with:
